--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="last_name">Last name</string>
     <string name="confirm_pasword">Confirm password</string>
     <string name="already_have_account">Already have an account?</string>
+    <string name="addPhotosOfPet">Add photos of your pet</string>
 </resources>
