--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="confirm_pasword">Confirm password</string>
     <string name="already_have_account">Already have an account?</string>
     <string name="addPhotosOfPet">Add photos of your pet</string>
+    <string name="tellOthersAboutYourPet">Tell others about your pet</string>
 </resources>
