Created settings activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="already_have_account">Already have an account?</string>
     <string name="addPhotosOfPet">Add photos of your pet</string>
     <string name="tellOthersAboutYourPet">Tell others about your pet</string>
+    <string name="incognitoText">Enable Incognito mode to hide your pet from the match queue of the other pets.
+        However, the matches your already has can still view your pet.</string>
+    <string name="notificationSettings">Notification settings</string>
+    <string name="settingsHeader">Settings</string>
+    <string name="locationTitle">Current location</string>
+    <string name="developerNotes">Developer notes</string>
+    <string name="logOut">Log out</string>
+    <string name="deleteAccount">Delete account</string>
 </resources>
