--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="name">Name</string>
     <string name="milo">Milo</string>
     <string name="continueText">Continue</string>
+    <string name="profile">Profile</string>
+    <string name="firstPhoto">The first photo on the upper left will be your profile picture that is first seen by other users.</string>
 </resources>
