Linked postRegisterUserDetails to SwipeActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="addPhotosOfPet">Add photos of your pet</string>
     <string name="tellOthersAboutYourPet">Tell others about your pet</string>
     <string name="incognitoText">Enable Incognito mode to hide your pet from the match queue of the other pets.
-        However, the matches your already has can still view your pet.</string>
+        However, the matches your pet already has can still view your pet.</string>
     <string name="notificationSettings">Notification settings</string>
     <string name="settingsHeader">Settings</string>
     <string name="locationTitle">Current location</string>
