--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,14 @@
     <string name="profile">Profile</string>
     <string name="aboutMe">About me</string>
     <string name="firstPhoto">The first photo on the upper left will be your profile picture that is first seen by other users.</string>
+    <string name="aboutTindergree">Tindergree is a geosocial networking and relationship-pairing mobile application for cats and dogs.
+        There is an online account system where users can register and login to use this app.
+        After account creation, the user will then create a profile for their pet, with details specifying name,
+        location, and personal description of their pet, among others.
+        The user can find other matches for their pet using the app.
+        Tindergree shows the user a list of potential matches, and the user can either swipe left/right to either
+        send a match request, or move to the next potential match. When a user finds a good match for their pet,
+        they can send a match request to that profile, and that user receiving the match
+        request will be prompted about a new match request, where they can either accept or reject the match.
+        Once the request has been accepted, the two users can now send real-time messages to each other.</string>
 </resources>
