Added about your pet input in postRegisterUserDetails + field checker for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="milo">Milo</string>
     <string name="continueText">Continue</string>
     <string name="profile">Profile</string>
-    <string name="aboutMe">About me</string>
+    <string name="aboutMe">About your pet</string>
     <string name="firstPhoto">The first photo on the upper left will be your profile picture that is first seen by other users.</string>
     <string name="aboutTindergree">Tindergree is a geosocial networking and relationship-pairing mobile application for cats and dogs.
         There is an online account system where users can register and login to use this app.
